force-app/main/default/objects/User_Audit_Configuration__c/fields/Gusto_Desk_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>Gusto_Desk_Sender_Address__c</fullName>
    <description>Stores the sender email address for Gusto Desk Users</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores the sender email address for Gusto Desk Users</inlineHelpText>
    <label>Gusto Desk Sender Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>