force-app/main/default/objects/User_Audit_Configuration__c/fields/Internal_Min_Remainder_Days__c.field-meta.xml
<CustomField>
    <fullName>Internal_Min_Remainder_Days__c</fullName>
    <description>To store the the minimum remainder day value for internal users</description>
    <inlineHelpText>Minimum remainder value at which email notif will be sent to Internal Users</inlineHelpText>
    <label>Internal Min Remainder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>