force-app/main/default/objects/User_Audit_Configuration__c/fields/Internal_Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>Internal_Sender_Address__c</fullName>
    <description>Stores the sender email address for Internal users</description>
    <inlineHelpText>Stores the sender email address for Internal users</inlineHelpText>
    <label>Internal Sender Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>