force-app/main/default/objects/User_Audit_Configuration__c/fields/Note_for_Notify__c.field-meta.xml
<CustomField>
    <fullName>Note_for_Notify__c</fullName>
    <description>To store the text value for notifying users in the Notes__c field on user</description>
    <inlineHelpText>Text value for notifying users in the Notes__c field on user</inlineHelpText>
    <label>Note for Notify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>